--- a/src/main/resources/assets/triermod/lang/en_us.json
+++ b/src/main/resources/assets/triermod/lang/en_us.json
@@ -1,19 +1,46 @@
 {
   "block.triermod.barrel_iron": "barrel iron",
-  "block.triermod.core_earth": "core earth",
+  "block.triermod.deepslate_styx_ore": "deepslate styx ore",
+  "block.triermod.deepslate_text_ore": "deepslate text ore",
   "block.triermod.magicrop": "magicrop plant",
+  "block.triermod.nurse": "nurse",
+  "block.triermod.raw_styx_block": "raw styx block",
+  "block.triermod.raw_text_block": "raw text block",
+  "block.triermod.styx_block": "styx block",
+  "block.triermod.styx_ore": "styx ore",
   "block.triermod.text_block": "text block",
   "block.triermod.text_ore": "text ore",
-  "block.triermod.text_ore_deepslate": "deepslate text ore",
+  "block.triermod.trier_block": "trier block",
   "entity.minecraft.villager.triermod.trier_master": "Trier Master",
+  "entity.triermod.beesoldier": "bee soldier",
+  "entity.triermod.orc": "orc",
+  "item.triermod.beesoldier_spawn_egg": "beesoldier spawn egg",
+  "item.triermod.empty_boots": "empty boots",
+  "item.triermod.empty_chestplate": "empty chestplate",
+  "item.triermod.empty_helmet": "empty helmet",
+  "item.triermod.empty_leggings": "empty leggings",
   "item.triermod.excalibur": "Excalibur",
-  "item.triermod.heptagram": "Heptagram",
-  "item.triermod.magic_ball": "magic ball",
+  "item.triermod.excalibur_dark": "Excalibur(dark)",
+  "item.triermod.fire_sword": "the sword of fire",
   "item.triermod.magicrop_fruit": "magicrop",
   "item.triermod.magicrop_seed": "magicrop seed",
-  "item.triermod.power_of_flora": "Power of Flora",
+  "item.triermod.manammo": "mana ammo",
+  "item.triermod.music_disc_xhq": "XHQ's disc",
+  "item.triermod.orc_spawn_egg": "orc spawn egg",
+  "item.triermod.raw_styx_ore": "raw styx ore",
+  "item.triermod.raw_text_ore": "raw text ore",
+  "item.triermod.styx_boots": "styx boots",
+  "item.triermod.styx_chestplate": "styx chestplate",
+  "item.triermod.styx_helmet": "styx helmet",
+  "item.triermod.styx_ingot": "styx ingot",
+  "item.triermod.styx_leggings": "styx leggings",
+  "item.triermod.styx_nugget": "styx nugget",
+  "item.triermod.styx_sword": "the sword of styx",
+  "item.triermod.text_boots": "text boots",
+  "item.triermod.text_chestplate": "text chestplate",
+  "item.triermod.text_helmet": "text helmet",
   "item.triermod.text_ingot": "text ingot",
-  "item.triermod.text_ore_raw": "raw text ore",
-  "item.triermod.the_sword_of_fire": "the_sword_of_fire",
+  "item.triermod.text_leggings": "text leggings",
+  "item.triermod.text_nugget": "text nugget",
   "itemGroup.triertab": "Trier"
 }
