--- a/src/main/resources/assets/triermod/lang/en_us.json
+++ b/src/main/resources/assets/triermod/lang/en_us.json
@@ -42,5 +42,6 @@
   "item.triermod.text_ingot": "text ingot",
   "item.triermod.text_leggings": "text leggings",
   "item.triermod.text_nugget": "text nugget",
-  "itemGroup.triertab": "Trier"
+  "itemGroup.triertab": "Trier",
+  "item.triermod.throwable_ball.tip": "Right-click on the block to ignite, right-click on the air to launch"
 }
