--- a/src/main/resources/assets/triermod/lang/zh_cn.json
+++ b/src/main/resources/assets/triermod/lang/zh_cn.json
@@ -1,46 +1,47 @@
 {
   "block.triermod.barrel_iron": "铁的桶",
-  "block.triermod.deepslate_styx_ore": "deepslate styx ore",
-  "block.triermod.deepslate_text_ore": "deepslate text ore",
+  "block.triermod.deepslate_styx_ore": "深层幽冥矿",
+  "block.triermod.deepslate_text_ore": "深层测试矿",
   "block.triermod.magicrop": "魔力种植物",
-  "block.triermod.nurse": "nurse",
-  "block.triermod.raw_styx_block": "raw styx block",
-  "block.triermod.raw_text_block": "raw text block",
-  "block.triermod.styx_block": "styx block",
-  "block.triermod.styx_ore": "styx ore",
+  "block.triermod.nurse": "护士",
+  "block.triermod.raw_styx_block": "粗幽冥块",
+  "block.triermod.raw_text_block":"粗测试块",
+  "block.triermod.styx_block": "幽冥块",
+  "block.triermod.styx_ore": "幽冥矿",
   "block.triermod.text_block": "测试方块",
   "block.triermod.text_ore": "测试矿",
-  "block.triermod.trier_block": "trier block",
+  "block.triermod.trier_block": "试验台",
   "entity.minecraft.villager.triermod.trier_master": "试验品大师",
-  "entity.triermod.beesoldier": "bee soldier",
+  "entity.triermod.beesoldier": "蜂兵",
   "entity.triermod.orc": "orc",
-  "item.triermod.beesoldier_spawn_egg": "beesoldier spawn egg",
-  "item.triermod.empty_boots": "empty boots",
-  "item.triermod.empty_chestplate": "empty chestplate",
-  "item.triermod.empty_helmet": "empty helmet",
-  "item.triermod.empty_leggings": "empty leggings",
+  "item.triermod.beesoldier_spawn_egg": "蜂兵刷怪蛋",
+  "item.triermod.empty_boots": "空靴子",
+  "item.triermod.empty_chestplate": "空胸甲",
+  "item.triermod.empty_helmet": "空头盔",
+  "item.triermod.empty_leggings": "空护腿",
   "item.triermod.excalibur": "誓约胜利之剑",
-  "item.triermod.excalibur_dark": "Excalibur(dark)",
-  "item.triermod.fire_sword": "the sword of fire",
+  "item.triermod.excalibur_dark": "胜利誓约之剑(暗)",
+  "item.triermod.fire_sword": "烈焱剑",
   "item.triermod.magicrop_fruit": "魔力种",
   "item.triermod.magicrop_seed": "魔力种种子",
-  "item.triermod.manammo": "mana ammo",
-  "item.triermod.music_disc_xhq": "XHQ's disc",
-  "item.triermod.orc_spawn_egg": "orc spawn egg",
-  "item.triermod.raw_styx_ore": "raw styx ore",
-  "item.triermod.raw_text_ore": "raw text ore",
-  "item.triermod.styx_boots": "styx boots",
-  "item.triermod.styx_chestplate": "styx chestplate",
-  "item.triermod.styx_helmet": "styx helmet",
-  "item.triermod.styx_ingot": "styx ingot",
-  "item.triermod.styx_leggings": "styx leggings",
-  "item.triermod.styx_nugget": "styx nugget",
-  "item.triermod.styx_sword": "the sword of styx",
-  "item.triermod.text_boots": "text boots",
-  "item.triermod.text_chestplate": "text chestplate",
-  "item.triermod.text_helmet": "text helmet",
+  "item.triermod.manammo": "魔力弹",
+  "item.triermod.music_disc_xhq": "XHQ's 唱片",
+  "item.triermod.orc_spawn_egg": "orc刷怪蛋",
+  "item.triermod.raw_styx_ore": "粗幽冥矿",
+  "item.triermod.raw_text_ore": "粗测试矿",
+  "item.triermod.styx_boots": "幽冥靴子",
+  "item.triermod.styx_chestplate": "幽冥胸甲",
+  "item.triermod.styx_helmet": "幽冥头盔",
+  "item.triermod.styx_ingot": "幽冥ingot",
+  "item.triermod.styx_leggings": "幽冥护腿",
+  "item.triermod.styx_nugget": "幽冥粒",
+  "item.triermod.styx_sword": "幽冥剑",
+  "item.triermod.text_boots": "测试靴子",
+  "item.triermod.text_chestplate": "测试胸甲",
+  "item.triermod.text_helmet": "测试头盔",
   "item.triermod.text_ingot": "测试锭",
-  "item.triermod.text_leggings": "text leggings",
-  "item.triermod.text_nugget": "text nugget",
+  "item.triermod.text_leggings": "测试护腿",
+  "item.triermod.text_nugget": "测试粒",
+  "item.triermod.throwable_ball.tip": "右击方块点燃，右击空气发射",
   "itemGroup.triertab": "测试"
 }
